# REALTIME_SPEECH_TRANSLATOR

./: .flake8  .gitignore  README.md  main.py  pyproject.toml  setup_models.py
