[tool.poetry]
name = "realtime-speech-translator"
version = "0.1.0"
description = ""
authors = ["Naoyoshi Aikawa <n.aikawa91@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
vosk = "0.3.44"
numpy = "^2.0.0"
google-cloud-translate = "^3.15.3"
gradio = "^4.37.1"
scipy = "^1.14.0"
speechbrain = "^1.0.0"
torch = "^2.3.1"
torchaudio = "^2.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
